# misuka

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS  LICENSE  README.md  mitsuba3-and-notebooks.code-workspace  pyproject.toml  setup.py
.github/workflows/: wheels.yml
docs/: generate_plugin_doc.py  pull_request_template.md  release_notes.rst  requirements.txt
docs/src/developer_guide/: compiling.rst
include/mitsuba/core/: spectrum.h
include/mitsuba/python/: docstr.h
include/mitsuba/render/: film.h  imageblock.h  sensor.h
resources/: mitsuba.conf.template
src/: conftest.py
src/bsdfs/: CMakeLists.txt  acousticbsdf.cpp
src/bsdfs/tests/: test_acousticbsdf.py
src/core/: bitmap.cpp  properties.cpp  struct.cpp
src/core/python/: bbox_v.cpp  bsphere_v.cpp  logger.cpp  transform_v.cpp
src/core/tests/: test_bbox.py  test_bsphere.py  test_transform.py
src/films/: CMakeLists.txt  specfilm.cpp  spectape.cpp  tape.cpp
src/films/tests/: test_tape.py
src/integrators/: CMakeLists.txt  acoustic_path.cpp  acousticpath.cpp
src/integrators/tests/: .gitignore  plot_etcs.ipynb  plot_etcs.py  test_acoustic_ad_integrators.py  test_acoustic_path.py
src/python/python/ad/integrators/: __init__.py  acoustic_ad.py  acoustic_ad_threepoint.py  acoustic_prb.py  acoustic_prb_threepoint.py
src/render/: CMakeLists.txt  film.cpp  imageblock.cpp  sensor.cpp
src/render/python/: imageblock_v.cpp  sensor_v.cpp
src/render/tests/: test_renders.py
src/sensors/: batch.cpp  microphone.cpp
src/sensors/tests/: test_microphone.py
src/spectra/: irregular.cpp  regular.cpp
src/spectra/tests/: test_irregular.py  test_regular.py
