[build-system]
requires = [
    "scikit-build-core",
    "nanobind==2.13.0",
    "drjit==1.4.0",
    "typing_extensions>=4.12",
    "hatch-fancy-pypi-readme",
]
build-backend = "scikit_build_core.build"


[project]
name = "Misuka"
dynamic = ["version"]
description = "misuka: A differentiable room acoustic renderer"
readme = "README.md"
dependencies = [
  "typing_extensions>=4.12;python_version<\"3.11\"",
  "drjit==1.4.0",
]
requires-python = ">=3.9"
authors = [
    { name = "Tobias J{\"u}terbock", email = "a.jueterbock@tu-berlin.de" }
]
license = "PolyForm-Noncommercial-1.0.0 AND BSD-3-Clause"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/misuka-renderer/misuka"

[project.scripts]
mitsuba = "mitsuba.cli:_main"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Tool to generate README for PyPI
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

cmake.verbose = true
logging.level = "INFO"

# Some bundled dependencies (e.g. ext/zlib) declare a very old
# 'cmake_minimum_required'. CMake >= 4.0 removed compatibility with these,
# causing configuration to fail. Allow them to configure anyway.
[tool.scikit-build.cmake.define]
CMAKE_POLICY_VERSION_MINIMUM = "3.5"


[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
archs = ["auto64"]
skip = "*-musllinux* pp*"
manylinux-aarch64-image = "manylinux2014"

# Try to import the package to see if it was built correctly (compromise)
test-command = ["python -c \"import mitsuba as mi; mi.set_variant('scalar_acoustic')\""]

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} --ignore-missing-dependencies {wheel}"

[tool.cibuildwheel.linux]
before-all = "yum install -y libatomic nasm"

[[tool.cibuildwheel.overrides]]
# Need to manually tag the wheel as manylinux
# WARNING: Tag depends on the image used by cibuildwheel
select = "*-manylinux_x86_64"
repair-wheel-command = "pip install wheel>=0.40; new_whl_name=$(python -m wheel tags --platform-tag manylinux_2_28_x86_64 {wheel} | tail -1 | cat); cp $(dirname {wheel})/$new_whl_name {dest_dir}"

[[tool.cibuildwheel.overrides]]
# Need to manually tag the wheel as manylinux
# WARNING: Tag depends on the image used by cibuildwheel
select = "*-manylinux_aarch64"
repair-wheel-command = "pip install wheel>=0.40; new_whl_name=$(python -m wheel tags --platform-tag manylinux_2_17_aarch64.manylinux2014_aarch64 {wheel} | tail -1 | cat); cp $(dirname {wheel})/$new_whl_name {dest_dir}"

[tool.pytest.ini_options]
testpaths = [ "src" ]
norecursedirs = [ "src/python" ]

[tool.scikit-build.metadata.version]
# Fetch version number from header file
provider = "scikit_build_core.metadata.regex"
input = "include/mitsuba/mitsuba.h"
regex = '''(?sx)
\#define \s+ MI_VERSION_MAJOR \s+ (?P<major>\d+) .*?
\#define \s+ MI_VERSION_MINOR \s+ (?P<minor>\d+) .*?
\#define \s+ MI_VERSION_PATCH \s+ (?P<patch>\d+) .*?
'''
result = "{major}.{minor}.{patch}"

# Build PyPI compliant README file from original README.md
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = '''
![Misuka logo](https://raw.githubusercontent.com/misuka-renderer/misuka/blob/master/docs/images/misuka_logo.png)
'''

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "Misuka Logo\">\n"
pattern = "(.*)"
